force-app/main/default/objects/Asset/fields/Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Access_Code__c</fullName>
    <label>Access Code</label>
    <type>TextArea</type>
</CustomField>