force-app/main/default/objects/Asset/fields/Access_Note__c.field-meta.xml
<CustomField>
    <fullName>Access_Note__c</fullName>
    <description>Note related to property access.</description>
    <label>Access Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>