force-app/main/default/objects/Asset/fields/AFM_Zone__c.field-meta.xml
<CustomField>
    <fullName>AFM_Zone__c</fullName>
    <label>AFM Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AFM_Zone</valueSetName>
    </valueSet>
</CustomField>