force-app/main/default/objects/Asset/fields/Asset_Creation_Source__c.field-meta.xml
<CustomField>
    <fullName>Asset_Creation_Source__c</fullName>
    <description>Identifies the source of the asset upon creation.</description>
    <label>Asset Creation Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TE 2.0</fullName>
            </value>
            <value>
                <fullName>Scoping Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>