force-app/main/default/objects/Asset/fields/Asset_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Task_Status__c</fullName>
    <label>Asset Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Tasks</fullName>
            </value>
            <value>
                <fullName>Active Tasks</fullName>
            </value>
            <value>
                <fullName>Needs Attention</fullName>
            </value>
            <value>
                <fullName>Needs Tracing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>