force-app/main/default/objects/Asset/fields/Bush_Count__c.field-meta.xml
<CustomField>
    <fullName>Bush_Count__c</fullName>
    <label>Bush Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>