force-app/main/default/objects/Asset/fields/CU_Property_Id__c.field-meta.xml
<CustomField>
    <fullName>CU_Property_Id__c</fullName>
    <label>Customer Property Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>