force-app/main/default/objects/Asset/fields/Current_Tracing_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Tracing_ID__c</fullName>
    <label>Current Tracing ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>