force-app/main/default/objects/Asset/fields/Driveway_SQFT__c.field-meta.xml
<CustomField>
    <fullName>Driveway_SQFT__c</fullName>
    <label>Driveway (SQFT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>