force-app/main/default/objects/Asset/fields/Flower_Bed_SQFT__c.field-meta.xml
<CustomField>
    <fullName>Flower_Bed_SQFT__c</fullName>
    <label>Flower Bed (SQFT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>