force-app/main/default/objects/Asset/fields/FullAddress__c.field-meta.xml
<CustomField>
    <fullName>FullAddress__c</fullName>
    <formula>Street_Address__c + &apos;, &apos; +  City__c + &apos;, &apos; +  State__c + &apos;, &apos; +  Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>