force-app/main/default/objects/Asset/fields/Has_Garage__c.field-meta.xml
<CustomField>
    <fullName>Has_Garage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Garage</label>
    <type>Checkbox</type>
</CustomField>