force-app/main/default/objects/Asset/fields/Has_Unfinished_Basement__c.field-meta.xml
<CustomField>
    <fullName>Has_Unfinished_Basement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Unfinished Basement</label>
    <type>Checkbox</type>
</CustomField>