force-app/main/default/objects/Asset/fields/Housekeeping_Markup__c.field-meta.xml
<CustomField>
    <fullName>Housekeeping_Markup__c</fullName>
    <label>Housekeeping Markup</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>