force-app/main/default/objects/Asset/fields/Interior_SQFT__c.field-meta.xml
<CustomField>
    <fullName>Interior_SQFT__c</fullName>
    <label>Interior (SQFT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>