force-app/main/default/objects/Asset/fields/Last_Tracing_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Tracing_Update__c</fullName>
    <label>Last Tracing Update</label>
    <type>DateTime</type>
</CustomField>