force-app/main/default/objects/Asset/fields/Lawn_Care_Markup__c.field-meta.xml
<CustomField>
    <fullName>Lawn_Care_Markup__c</fullName>
    <label>Lawn Care Markup</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>