force-app/main/default/objects/Asset/fields/Lawn_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Lawn_Sq_Ft__c</fullName>
    <label>Lawn (SQFT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>