force-app/main/default/objects/Asset/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>