force-app/main/default/objects/Asset/fields/Property_Location__c.field-meta.xml
<CustomField>
    <fullName>Property_Location__c</fullName>
    <label>Property Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>