force-app/main/default/objects/Asset/fields/Property_Metrics_Under_Management__c.field-meta.xml
<CustomField>
    <fullName>Property_Metrics_Under_Management__c</fullName>
    <label>Property Metrics Under Management</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Metrics</valueSetName>
    </valueSet>
</CustomField>