force-app/main/default/objects/Asset/fields/Rain_Gutter_ln_ft__c.field-meta.xml
<CustomField>
    <fullName>Rain_Gutter_ln_ft__c</fullName>
    <label>Rain Gutter (LFT)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>