force-app/main/default/objects/Asset/fields/TE_Property_Id__c.field-meta.xml
<CustomField>
    <fullName>TE_Property_Id__c</fullName>
    <externalId>true</externalId>
    <label>TE Property Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>