force-app/main/default/objects/Asset/fields/Total_Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Total_Bathrooms__c</fullName>
    <label>Total Bathrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>