force-app/main/default/objects/Asset/fields/UAT_Test_Metric__c.field-meta.xml
<CustomField>
    <fullName>UAT_Test_Metric__c</fullName>
    <description>This is a test metric - do not push to production.</description>
    <label>UAT Test Metric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>