force-app/main/default/objects/Asset/fields/Unique_Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Property_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Property ID to prevent duplicate assets related to the same account.</description>
    <label>Unique Property ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>