force-app/main/default/objects/Asset/fields/Walkway_SQFT__c.field-meta.xml
<CustomField>
    <fullName>Walkway_SQFT__c</fullName>
    <label>Walkway (SQFT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>