force-app/main/default/objects/Asset/validationRules/Asset_Duplicate_Asset.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Duplicate_Asset</fullName>
    <active>true</active>
    <description>Works in conjunction with Asset Trigger to detect whether an existing asset record tied to the same account and with the same property id already exists.</description>
    <errorConditionFormula>CONTAINS(TE_Property_Id__c, &quot;Duplicate&quot;)</errorConditionFormula>
    <errorMessage>Asset already exists for this account.</errorMessage>
</ValidationRule>