force-app/main/default/objects/Asset/validationRules/Invalid_values.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_values</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Text(Status) != &apos;Active&apos;, Text(Status) != &apos;Archived&apos;, Text(Status) != &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Invalid field value</errorMessage>
</ValidationRule>