force-app/main/default/objects/Asset/listViews/Eng_Test_Account_Assets.listView-meta.xml
<ListView>
    <fullName>Eng_Test_Account_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>CPQ Engineering Test Account</value>
    </filters>
    <label>Eng Test Account Assets</label>
</ListView>